Coded the Actor class and set up testing stuff.
I coded the base Actor class(not sure if it's going to be extended).
Also got a couple of test components skeletoned for testing Actor
creation and manipulation.

--- a/Source/QuadPong.vcxproj
+++ b/Source/QuadPong.vcxproj
@@ -11,6 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="TestComponents.cpp" />
+    <ClCompile Include="VisualComponent.cpp" />
     <ClCompile Include="ActorFactory.cpp" />
     <ClCompile Include="Error.cpp" />
     <ClCompile Include="EventManager.cpp" />
