Wrote Actor test code, as of now - working
Wrote a couple of test ActorComponents, and built a few different actors
using different combinations of the components. Also wrote a test method
for the Actor system. As of now, triangle color changes are handled
through actor updates.

--- a/Source/QuadPong.vcxproj
+++ b/Source/QuadPong.vcxproj
@@ -37,6 +37,10 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="test.xml" />
+    <Xml Include="test1.xml" />
+    <Xml Include="test2.xml" />
+    <Xml Include="test3.xml" />
+    <Xml Include="test4.xml" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{98C30B4B-15ED-4C8C-97DA-99E1B44A07BC}</ProjectGuid>
