--- a/Source/QuadPong.vcxproj.filters
+++ b/Source/QuadPong.vcxproj.filters
@@ -94,7 +94,19 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="test1.xml">
+      <Filter>Source Files\Actors\ActorTypes</Filter>
+    </Xml>
     <Xml Include="test.xml">
+      <Filter>Source Files\Actors\ActorTypes</Filter>
+    </Xml>
+    <Xml Include="test2.xml">
+      <Filter>Source Files\Actors\ActorTypes</Filter>
+    </Xml>
+    <Xml Include="test3.xml">
+      <Filter>Source Files\Actors\ActorTypes</Filter>
+    </Xml>
+    <Xml Include="test4.xml">
       <Filter>Source Files\Actors\ActorTypes</Filter>
     </Xml>
   </ItemGroup>
