--- a/Source/QuadPong.vcxproj.filters
+++ b/Source/QuadPong.vcxproj.filters
@@ -29,6 +29,12 @@
     <Filter Include="Source Files\Actors\ComponentTypes">
       <UniqueIdentifier>{6123cb5e-cbbb-4923-b42c-a45ff242f98e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Views">
+      <UniqueIdentifier>{6dda93b5-213f-4f18-a70f-b6db8b508b54}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Input">
+      <UniqueIdentifier>{403d9897-010f-4212-b60c-66205b40f1f9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -70,6 +76,15 @@
     <ClCompile Include="TestComponents.cpp">
       <Filter>Source Files\Actors\ComponentTypes</Filter>
     </ClCompile>
+    <ClCompile Include="KeyboardHandler.cpp">
+      <Filter>Source Files\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="PointerHandler.cpp">
+      <Filter>Source Files\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="HumanView.cpp">
+      <Filter>Source Files\Views</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
@@ -86,6 +101,12 @@
     </ClInclude>
     <ClInclude Include="tinyxml2.h">
       <Filter>Source Files\TinyXml</Filter>
+    </ClInclude>
+    <ClInclude Include="Views.h">
+      <Filter>Source Files\Views</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Source Files\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
