Jotted down some notes about component design
Didn't really add much to the code other than an empty CicleComponent
class, but I wrote down a few notes as to how I think I could handle
collisions between shapes. Still have to design the components
themeselves, but I think it will be much easier to do if I have
collision handling done externally.

--- a/Source/QuadPong.vcxproj.filters
+++ b/Source/QuadPong.vcxproj.filters
@@ -114,17 +114,12 @@
     <ClInclude Include="Input.h">
       <Filter>Source Files\Input</Filter>
     </ClInclude>
-    <ClInclude Include="Vector.h">
-      <Filter>Source Files\Utils</Filter>
-    </ClInclude>
     <ClInclude Include="Tests.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="notes.txt">
-      <Filter>Source Files</Filter>
-    </Text>
+    <ClInclude Include="Utils.h">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="test1.xml">
@@ -142,5 +137,10 @@
     <Xml Include="test4.xml">
       <Filter>Source Files\Actors\ActorTypes</Filter>
     </Xml>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="notes.md">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
