--- a/Source/QuadPong.vcxproj
+++ b/Source/QuadPong.vcxproj
@@ -37,11 +37,11 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="Tests.h" />
     <ClInclude Include="tinyxml2.h" />
-    <ClInclude Include="Vector.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="Views.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="notes.txt" />
+    <Text Include="notes.md" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="test.xml" />
