Coded PhysicalComponent, collision system
Organized PhysicalComponent as well as shape composition.
PhysicalComponent instantiation seems to be working well; haven't tested
updating, applying forces, etc. Also coded a first attempt at a
collision system. As of now, collisions with rectangles and circles are
coded, but still need to be tested. I may have to code up a visual
component system before testing collisions. Also reorganized Utils.h a
bit, moving Vec2D to its own file, and including it in Utils.h.

--- a/Source/QuadPong.vcxproj
+++ b/Source/QuadPong.vcxproj
@@ -12,8 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="HumanView.cpp" />
     <ClCompile Include="KeyboardHandler.cpp" />
+    <ClCompile Include="PhysicalComponent.cpp" />
     <ClCompile Include="PointerHandler.cpp" />
     <ClCompile Include="TestComponents.cpp" />
     <ClCompile Include="Tests.cpp" />
@@ -31,13 +33,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="Tests.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="Vec2D.h" />
     <ClInclude Include="Views.h" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +56,7 @@
     <Xml Include="test2.xml" />
     <Xml Include="test3.xml" />
     <Xml Include="test4.xml" />
+    <Xml Include="TestPhysical.xml" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{98C30B4B-15ED-4C8C-97DA-99E1B44A07BC}</ProjectGuid>
