--- a/Source/QuadPong.vcxproj.filters
+++ b/Source/QuadPong.vcxproj.filters
@@ -38,6 +38,9 @@
     <Filter Include="Source Files\Utils">
       <UniqueIdentifier>{e4e145a1-0202-494d-bd8b-709b1eea63d1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Physics">
+      <UniqueIdentifier>{0e510879-47dc-42e6-baae-5f73fb7fe25e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -91,6 +94,12 @@
     <ClCompile Include="Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicalComponent.cpp">
+      <Filter>Source Files\Actors\ComponentTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="Collision.cpp">
+      <Filter>Source Files\Physics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
@@ -120,6 +129,15 @@
     <ClInclude Include="Utils.h">
       <Filter>Source Files\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Shape.h">
+      <Filter>Source Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Collision.h">
+      <Filter>Source Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Vec2D.h">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="test1.xml">
@@ -135,6 +153,9 @@
       <Filter>Source Files\Actors\ActorTypes</Filter>
     </Xml>
     <Xml Include="test4.xml">
+      <Filter>Source Files\Actors\ActorTypes</Filter>
+    </Xml>
+    <Xml Include="TestPhysical.xml">
       <Filter>Source Files\Actors\ActorTypes</Filter>
     </Xml>
   </ItemGroup>
