--- a/Source/QuadPong.vcxproj
+++ b/Source/QuadPong.vcxproj
@@ -14,9 +14,11 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="BallComponent.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="HumanView.cpp" />
     <ClCompile Include="KeyboardHandler.cpp" />
     <ClCompile Include="Match.cpp" />
+    <ClCompile Include="ScoreboardComponent.cpp" />
     <ClCompile Include="Volley.cpp" />
     <ClCompile Include="PaddleComponent.cpp" />
     <ClCompile Include="PhysicalComponent.cpp" />
@@ -41,6 +43,7 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Error.h" />
+    <ClInclude Include="FontManager.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Input.h" />
